devops/iac/local/k8s/3-example-external-dns/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-v1
  labels:
    app: nginx
    type: frontend

spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-v1
        type: frontend
    spec:
      containers:
        - name: nginx
          image: arm64v8/nginx:1.25.5
          ports:
            - name: http
              containerPort: 80
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v1
