devops/iac/local/k8s/3-example-external-dns/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginxapp1-ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: "eapp1.infra.duumbi.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port:
                  number: 80
